--- a/smash_overlay.html
+++ b/smash_overlay.html
@@ -65,21 +65,24 @@
         [data-theme="remix"] .center-logo { width: 120px; height: 120px; border-radius: 50%; border: 4px solid white; background-image: url('https://raw.githubusercontent.com/destronfgc/stillwatersmash/main/images/STRLogo.png'); background-size: contain; background-position: center; background-repeat: no-repeat; background-color: #1a202c; }
         [data-theme="remix"] .match-info-box { background-color: #6FFFB0; color: #1A202C; font-family: 'Anton', sans-serif; text-transform: uppercase; }
 
-        /* --- NEW: COMMENTATOR AND TICKER STYLES --- */
+        /* --- UPDATED: COMMENTATOR AND TICKER STYLES --- */
         .lower-third {
             position: absolute;
-            bottom: 80px;
-            left: 50%;
-            transform: translateX(-50%);
+            /* MOVED to top-left corner */
+            top: 150px; 
+            left: 30px;
             display: flex;
-            gap: 2rem;
+            /* Stack vertically */
+            flex-direction: column; 
+            gap: 1rem;
             opacity: 0;
             transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
-            transform: translate(-50%, 20px);
+            /* Slide in from the left */
+            transform: translateX(-100%);
         }
         .lower-third.visible {
             opacity: 1;
-            transform: translate(-50%, 0);
+            transform: translateX(0);
         }
         .commentator-box {
             padding: 0.5rem 1rem;
@@ -250,18 +253,15 @@
             const p2Alt = data.p2Alt || 1;
             document.getElementById('p2Character').src = p2CharFile ? `${stockIconBaseUrl}${p2CharFile}${p2Alt}.png` : 'https://placehold.co/80x80/232323/232323?text=';
             
-            // NEW: Update commentators and ticker
             document.getElementById('commentator1Name').textContent = data.commentator1Name || '';
             document.getElementById('commentator1Social').textContent = data.commentator1Social || '';
             document.getElementById('commentator2Name').textContent = data.commentator2Name || '';
             document.getElementById('commentator2Social').textContent = data.commentator2Social || '';
             document.getElementById('tickerText').textContent = data.tickerText || '';
 
-            // Hide individual commentator boxes if their names are empty
             document.getElementById('comm1-box').style.display = data.commentator1Name ? 'flex' : 'none';
             document.getElementById('comm2-box').style.display = data.commentator2Name ? 'flex' : 'none';
 
-            // Show/Hide main containers
             document.getElementById('commentators').classList.toggle('visible', data.showCommentators);
             document.getElementById('ticker').classList.toggle('visible', data.showTicker);
 
